Use getDeclaredConstructor().newInstance() in PlatformConfiguration.valueOf
covered by: anastosj.dco

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>